dnl Template file for GNU Autoconf
dnl Copyright 2021-2022  Michael Welter

dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 3 of the License, or
dnl (at your option) any later version.

dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.

dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([zon], [1.2.1~alfa], [https://github.com/Aygath/zon])
AM_INIT_AUTOMAKE([subdir-objects])
AC_PROG_CC
AC_CHECK_LIB([m],[cos])
AC_PATH_PROG(HELP2MAN, help2man, false // No help2man //)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
